--- a/computation/dart/jit-2.14/Dockerfile
+++ b/computation/dart/jit-2.14/Dockerfile
@@ -1,4 +1,4 @@
-FROM dart:3.2
+FROM dart:2.14
 
 WORKDIR /app
 
@@ -7,6 +7,4 @@ RUN dart pub get
 ADD . /app/
 
 EXPOSE 3000
-RUN dart compile exe main.dart -o main
-
-CMD ["./main"]
+CMD ["dart", "main.dart"]
