--- a/computation/python/python-3.6/Dockerfile
+++ b/computation/python/python-3.6/Dockerfile
@@ -1,13 +1,9 @@
-FROM python:3.9-slim
+FROM python:3.6-slim
 
 WORKDIR /app
 
 COPY . /app
 
-RUN pip install --no-cache-dir -r requirements.txt
-
 EXPOSE 3000
 
-ENV FLASK_ENV=production
-
-CMD ["flask", "run", "--host=0.0.0.0", "--port=3000"]
+CMD ["python", "app.py"]
