refactor: simplify Dockerfile

--- a/computation/dart/aot-2.14/Dockerfile
+++ b/computation/dart/aot-2.14/Dockerfile
@@ -2,9 +2,9 @@ FROM dart:2.14
 
 WORKDIR /app
 
-ADD pubspec.yaml /app/
+COPY pubspec.yaml .
 RUN dart pub get
-ADD . /app/
+COPY . .
 
 EXPOSE 3000
 RUN dart compile exe main.dart -o main
