complete benchmark CLI

--- a/benchmark/web/python/flask-2.3-gunicorn-python-3.8/Dockerfile
+++ b/benchmark/web/python/flask-2.3-gunicorn-python-3.8/Dockerfile
@@ -8,4 +8,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 
 EXPOSE 3000
-CMD ["gunicorn", "--bind", "0.0.0.0:3000", "--workers=4", "--threads=1" , "--reuse-port", "main:app"]
+CMD ["gunicorn", "--bind", "0.0.0.0:3000", "--workers=4", "--reuse-port", "main:app"]
