--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+clap = { version = "4.4.13", features = ["derive"] }
 indexmap = { version = "2.1.0", features = ["serde"] }
 rand = "0.8"
 regex = "1.10.2"
