feat: add website to benchmark metadata

--- a/benchmark/web/dart/dartfrog-1-aot-3.2/_benchmark.yaml
+++ b/benchmark/web/dart/dartfrog-1-aot-3.2/_benchmark.yaml
@@ -3,6 +3,7 @@ mode: AOT
 version:
   - "3.2"
 framework: Dart Frog
+framework_website: https://dartfrog.vgv.dev
 framework_flavor: Default
 framework_version:
   - "1"
