--- a/benchmark/web/javascript/express-4-bun-1/_benchmark.yaml
+++ b/benchmark/web/javascript/express-4-bun-1/_benchmark.yaml
@@ -3,6 +3,7 @@ mode: Bun
 version:
   - "1"
 framework: Express
+framework_website: https://expressjs.com
 framework_flavor: Default
 framework_version:
   - "4"
