--- a/benchmark/web/javascript/fastify-4-nodejs-14/_benchmark.yaml
+++ b/benchmark/web/javascript/fastify-4-nodejs-14/_benchmark.yaml
@@ -6,6 +6,7 @@ version:
   - "18"
   - "20"
 framework: Fastify
+framework_website: https://fastify.dev
 framework_flavor: Default
 framework_version:
   - "4"
