--- a/benchmark/web/javascript/nest-10-express-nodejs-16/_benchmark.yaml
+++ b/benchmark/web/javascript/nest-10-express-nodejs-16/_benchmark.yaml
@@ -5,6 +5,7 @@ version:
   - "18"
   - "20"
 framework: Nest
+framework_website: https://nestjs.com
 framework_flavor: Express
 framework_version:
   - "10"
