--- a/benchmark/web/kotlin/ktor-2-netty-temurin-21/_benchmark.yaml
+++ b/benchmark/web/kotlin/ktor-2-netty-temurin-21/_benchmark.yaml
@@ -3,6 +3,7 @@ mode: Temurin
 version:
   - "21"
 framework: Ktor
+framework_website: https://ktor.io
 framework_flavor: Netty
 framework_version:
   - "2"
