--- a/benchmark/web/php/symfony-6.4-php-8.3/_benchmark.yaml
+++ b/benchmark/web/php/symfony-6.4-php-8.3/_benchmark.yaml
@@ -3,6 +3,7 @@ mode: Default
 version:
   - "8.3"
 framework: Symfony
+framework_website: https://symfony.com
 framework_flavor: Default
 framework_version:
   - "6.4"
