--- a/benchmark/web/python/django-4.2-devserver-python-3.8/_benchmark.yaml
+++ b/benchmark/web/python/django-4.2-devserver-python-3.8/_benchmark.yaml
@@ -7,6 +7,7 @@ version:
   - "3.11"
   - "3.12"
 framework: Django
+framework_website: https://www.djangoproject.com
 framework_flavor: Development Server
 framework_version:
   - "4.2"
