--- a/benchmark/web/python/django-4.2-gunicorn-python-3.8/_benchmark.yaml
+++ b/benchmark/web/python/django-4.2-gunicorn-python-3.8/_benchmark.yaml
@@ -3,6 +3,7 @@ mode: Default
 version:
   - "3.8"
 framework: Django
+framework_website: https://www.djangoproject.com
 framework_flavor: Gunicorn
 framework_version:
   - "4.2"
