--- a/benchmark/web/dart/shelf-1-aot-2.14/_benchmark.yaml
+++ b/benchmark/web/dart/shelf-1-aot-2.14/_benchmark.yaml
@@ -11,6 +11,7 @@ version:
   - "3.1"
   - "3.2"
 framework: Shelf
+framework_website: https://pub.dev/packages/shelf
 framework_flavor: Default
 framework_version:
   - "1"
