--- a/benchmark/web/java/springboot-3.2-mvc-temurin-21/_benchmark.yaml
+++ b/benchmark/web/java/springboot-3.2-mvc-temurin-21/_benchmark.yaml
@@ -3,6 +3,7 @@ mode: Temurin
 version:
   - "21"
 framework: Spring Boot
+framework_website: https://spring.io/projects/spring-boot
 framework_flavor: MVC
 framework_version:
   - "3.2"
