--- a/benchmark/web/javascript/express-4-nodejs-12/_benchmark.yaml
+++ b/benchmark/web/javascript/express-4-nodejs-12/_benchmark.yaml
@@ -7,6 +7,7 @@ version:
   - "18"
   - "20"
 framework: Express
+framework_website: https://expressjs.com
 framework_flavor: Default
 framework_version:
   - "4"
