--- a/benchmark/web/javascript/fastify-4-bun-1/_benchmark.yaml
+++ b/benchmark/web/javascript/fastify-4-bun-1/_benchmark.yaml
@@ -3,6 +3,7 @@ mode: Bun
 version:
   - "1"
 framework: Fastify
+framework_website: https://fastify.dev
 framework_flavor: Default
 framework_version:
   - "4"
