--- a/benchmark/web/python/fastapi-0.108-uvicorn-python-3.8/_benchmark.yaml
+++ b/benchmark/web/python/fastapi-0.108-uvicorn-python-3.8/_benchmark.yaml
@@ -7,6 +7,7 @@ version:
   - "3.11"
   - "3.12"
 framework: FastAPI
+framework_website: https://fastapi.tiangolo.com
 framework_flavor: Uvicorn
 framework_version:
   - "0.108"
