--- a/benchmark/web/rust/actix-4-rust-1.74/_benchmark.yaml
+++ b/benchmark/web/rust/actix-4-rust-1.74/_benchmark.yaml
@@ -3,6 +3,7 @@ mode: Default
 version:
   - "1.74"
 framework: Actix
+framework_website: https://actix.rs
 framework_flavor: Default
 framework_version:
   - "4"
