--- a/benchmark/web/rust/axum-0.7-rust-1.74/_benchmark.yaml
+++ b/benchmark/web/rust/axum-0.7-rust-1.74/_benchmark.yaml
@@ -3,6 +3,7 @@ mode: Default
 version:
   - "1.74"
 framework: Axum
+framework_website: https://github.com/tokio-rs/axum
 framework_flavor: Default
 framework_version:
   - "0.7"
