--- a/benchmark/computation/dart/aot-2.14/_benchmark.yaml
+++ b/benchmark/computation/dart/aot-2.14/_benchmark.yaml
@@ -1,12 +1,9 @@
 language: Dart
 mode: AOT
-version:
+version: # only even versions and last minor
   - "2.14"
-  - "2.15"
   - "2.16"
-  - "2.17"
   - "2.18"
   - "2.19"
   - "3.0"
-  - "3.1"
   - "3.2"
