--- a/benchmark/web/dart/httpserver-aot-2.14/_benchmark.yaml
+++ b/benchmark/web/dart/httpserver-aot-2.14/_benchmark.yaml
@@ -11,6 +11,7 @@ version:
   - "3.1"
   - "3.2"
 framework: HttpServer
+framework_stdlib: true
 framework_website: https://api.dart.dev/stable/dart-io/HttpServer-class.html
 framework_flavor: Default
 framework_version:
