feat: use single quotes for benchmark.yaml

--- a/benchmark/computation/csharp/dotnet-6/benchmark.yaml
+++ b/benchmark/computation/csharp/dotnet-6/benchmark.yaml
@@ -1,8 +1,8 @@
 language: C#
 mode: .NET
 version:
-  - "6.0"
-  - "8.0"
+  - '6.0'
+  - '8.0'
 version_regex:
-  "Dockerfile": DEFAULT_DOCKER_REGEX
-  "web.csproj": "<TargetFramework>net(.+)<\/TargetFramework>"
+  Dockerfile: DEFAULT_DOCKER_REGEX
+  web.csproj: '<TargetFramework>net(.+)<\/TargetFramework>'
