--- a/benchmark/computation/java/temurin-8/benchmark.yaml
+++ b/benchmark/computation/java/temurin-8/benchmark.yaml
@@ -1,11 +1,11 @@
 language: Java
 mode: Temurin
 version:
-  - "8"
-  - "11"
-  - "17"
-  - "21"
+  - '8'
+  - '11'
+  - '17'
+  - '21'
 version_regex:
-  "Dockerfile": "temurin[-:](\\d+)"
+  Dockerfile: 'temurin[-:](\d+)'
 
 extended_warmup: true
