--- a/benchmark/web/java/springboot-2.7-webflux-temurin-8/Dockerfile
+++ b/benchmark/web/java/springboot-2.7-webflux-temurin-8/Dockerfile
@@ -1,4 +1,4 @@
-FROM maven:3.9.5-eclipse-temurin-21 AS build
+FROM maven:3-eclipse-temurin-8 AS build
 
 WORKDIR /app
 
@@ -10,7 +10,7 @@ COPY src ./src
 
 RUN mvn package -DskipTests
 
-FROM eclipse-temurin:21-alpine
+FROM eclipse-temurin:8
 
 WORKDIR /app
 
