--- a/benchmark/web/java/springboot-2.7-webflux-temurin-8/benchmark.yaml
+++ b/benchmark/web/java/springboot-2.7-webflux-temurin-8/benchmark.yaml
@@ -1,11 +1,16 @@
 language: Java
 mode: Temurin
 version:
-  - '21'
+  - '8'
+  - '11'
+  - '17'
+version_regex:
+  Dockerfile: 'temurin[-:](\d+)'
+  pom.xml: '<java\.version>(\d+)<\/java\.version>'
 framework: Spring Boot
 framework_website: https://spring.io/projects/spring-boot
 framework_flavor: WebFlux
 framework_version:
-  - '3.2'
+  - '2.7'
 
 extended_warmup: true
