--- a/benchmark/web/rust/axum-0.7-rust-1.74/Dockerfile
+++ b/benchmark/web/rust/axum-0.7-rust-1.74/Dockerfile
@@ -1,9 +1,15 @@
-FROM rust:1.74
+FROM rust:1.74 AS builder
 
 WORKDIR /app
-COPY . .
+COPY Cargo.* ./
+COPY src ./src
 
-RUN cargo install --path .
+RUN cargo build --release
+
+FROM debian:bookworm AS runtime
+RUN apt update && apt install -y libssl-dev
+
+COPY --from=builder /app/target/release/app /app
 
 EXPOSE 3000
-CMD ["benchmark"]
+ENTRYPOINT ["/app"]
