--- a/benchmark/web/rust/rocket-0.5-rust-1.74/Cargo.toml
+++ b/benchmark/web/rust/rocket-0.5-rust-1.74/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 publish = false
 
 [dependencies]
-axum = { version = "0.7"}
+rocket = { version = "0.5", features = ["json"] }
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
