benchmark: optimize php web benchmarks

--- a/benchmark/web/php/laravel-11-php-8.3/.env
+++ b/benchmark/web/php/laravel-11-php-8.3/.env
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:QjPvR/njJswMfk0r06beYHLJ4g3rZAA2r0WJB41j5uw=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
 
