--- a/benchmark/web/php/laravel-11-php-8.3/Dockerfile
+++ b/benchmark/web/php/laravel-11-php-8.3/Dockerfile
@@ -1,5 +1,6 @@
 FROM php:8.3-fpm
 
+# https://serverfault.com/questions/955883/php-fpm-is-slow-with-nginx
 RUN apt-get update \
   && apt-get -y install --no-install-recommends \
 	nginx \
@@ -12,8 +13,8 @@ RUN apt-get update \
   && docker-php-ext-install zip \
     intl \
     zip \
-    bcmath
-
+    bcmath \
+    opcache
 
 WORKDIR /app
 
@@ -23,7 +24,7 @@ COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 COPY . .
 
 # Install PHP dependencies
-RUN COMPOSER_ALLOW_SUPERUSER=1 composer update && composer install --no-dev --optimize-autoloader 
+RUN COMPOSER_ALLOW_SUPERUSER=1 composer update && composer install --no-dev --optimize-autoloader
 
 RUN chmod -R 777 storage
   
@@ -31,6 +32,9 @@ RUN mkdir -p var
 RUN chown -R www-data:www-data var
 
 COPY nginx.conf /etc/nginx/conf.d/custom.conf
+
+# Modify PHP-FPM settings
+COPY www.conf /usr/local/etc/php-fpm.d/www.conf
 
 # Start Nginx and PHP-FPM
 EXPOSE 3000
