--- a/benchmark/web/php/symfony-6.4-php-8.3/Dockerfile
+++ b/benchmark/web/php/symfony-6.4-php-8.3/Dockerfile
@@ -1,10 +1,11 @@
 FROM php:8.3-fpm
 
+# https://serverfault.com/questions/955883/php-fpm-is-slow-with-nginx
 RUN apt-get update && apt-get install -y \
     nginx \
     libzip-dev \
     zip \
-    && docker-php-ext-install zip
+    && docker-php-ext-install zip opcache
 
 WORKDIR /app
 
@@ -20,6 +21,7 @@ RUN mkdir -p var
 RUN chown -R www-data:www-data var
 
 COPY nginx.conf /etc/nginx/conf.d/custom.conf
+COPY www.conf /usr/local/etc/php-fpm.d/www.conf
 
 # Start Nginx and PHP-FPM
 EXPOSE 3000
