--- a/benchmark/web/dart/vania-0.2.7-aot-3.4/.env
+++ b/benchmark/web/dart/vania-0.2.7-aot-3.4/.env
@@ -4,7 +4,7 @@ APP_KEY='V_wy8yVcwkTlij_TUVPTmlbn2LnUl5vMa-jsoF07eSI='
 APP_HOST=0.0.0.0
 APP_PORT=3000
 APP_SHARED=true
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL='http://localhost:8000'
 APP_WEBSOCKET=false
 APP_SECURE=false
