feat: add copy option

--- a/benchmark/web/php/laravel-11-php-8.3/benchmark.yaml
+++ b/benchmark/web/php/laravel-11-php-8.3/benchmark.yaml
@@ -7,3 +7,7 @@ framework_website: https://laravel.com
 framework_flavor: Default
 framework_version:
   - '11'
+
+copy:
+  'nginx.conf': 'nginx.conf'
+  'www.conf': 'www.conf'
