--- a/benchmark/web/php/symfony-6.4-php-8.3/benchmark.yaml
+++ b/benchmark/web/php/symfony-6.4-php-8.3/benchmark.yaml
@@ -7,3 +7,7 @@ framework_website: https://symfony.com
 framework_flavor: Default
 framework_version:
   - '6.4'
+
+copy:
+  'nginx.conf': 'nginx.conf'
+  'www.conf': 'www.conf'
