--- a/benchmark/web/dart/httpserver-aot-2.14/benchmark.yaml
+++ b/benchmark/web/dart/httpserver-aot-2.14/benchmark.yaml
@@ -1,16 +1,12 @@
 language: Dart
 mode: AOT
-version:
+version: # only even versions and last minor
   - '2.14'
-  - '2.15'
   - '2.16'
-  - '2.17'
   - '2.18'
   - '2.19'
   - '3.0'
-  - '3.1'
   - '3.2'
-  - '3.3'
   - '3.4'
 framework: HttpServer
 framework_stdlib: true
