--- a/benchmark/computation/swift/swift-5.10/Dockerfile
+++ b/benchmark/computation/swift/swift-5.10/Dockerfile
@@ -1,10 +1,15 @@
-FROM swift:5.10
+FROM swift:5.10 as builder
 
 WORKDIR /app
-COPY . .
+COPY Sources ./Sources
+COPY Package.swift ./Package.swift
 
 RUN swift build -c release
 
-EXPOSE 3000
-CMD ["./.build/release/benchmark"]
+FROM swift:5.10-slim as runner
 
+WORKDIR /app
+COPY --from=builder /app/.build/release/benchmark ./benchmark
+
+EXPOSE 3000
+CMD ["./benchmark"]
