--- a/src/benchmark/web/data/Dockerfile
+++ b/src/benchmark/web/data/Dockerfile
@@ -1,4 +1,4 @@
-FROM rust:1.74 AS builder
+FROM rust:1.79 AS builder
 
 WORKDIR /app
 COPY Cargo.toml Cargo.lock ./
@@ -7,7 +7,7 @@ COPY static ./static
 
 RUN cargo build --release
 
-FROM debian:bookworm AS runtime
+FROM debian:bookworm-slim AS runtime
 COPY --from=builder /app/target/release/app /app
 
 EXPOSE 3000
