--- a/src/benchmark/web/data/Cargo.toml
+++ b/src/benchmark/web/data/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = "0.7.5"
+hyper = { version = "1.3.1", features = ["full"] }
 tokio = { version = "1.38.0", features = ["full"] }
+http-body-util = "0.1.2"
+hyper-util = { version = "0.1", features = ["full"] }
