--- a/benchmark/web/java/springboot-3.2-mvc-semeru-17/benchmark.yaml
+++ b/benchmark/web/java/springboot-3.2-mvc-semeru-17/benchmark.yaml
@@ -1,8 +1,7 @@
 language: Java
-mode: Temurin
+mode: Semeru
 version:
   - '17'
-  - '21'
 version_regex:
   Dockerfile: 'ARG JAVA_VERSION=(\d+)'
   pom.xml: '<java\.version>(\d+)<\/java\.version>'
