--- a/benchmark/web/java/vertx-4-semeru-11/benchmark.yaml
+++ b/benchmark/web/java/vertx-4-semeru-11/benchmark.yaml
@@ -1,9 +1,8 @@
 language: Java
-mode: Temurin
+mode: Semeru
 version:
   - '11'
   - '17'
-  - '21'
 version_regex:
   Dockerfile: 'ARG JAVA_VERSION=(\d+)'
   pom.xml: '<release>(\d+)<\/release>'
