--- a/benchmark/web/java/vertx-4-semeru-21/Dockerfile
+++ b/benchmark/web/java/vertx-4-semeru-21/Dockerfile
@@ -1,6 +1,6 @@
-ARG JAVA_VERSION=11
+ARG JAVA_VERSION=21
 
-FROM maven:3-eclipse-temurin-${JAVA_VERSION}
+FROM maven:3-ibm-semeru-${JAVA_VERSION}-jammy
 
 WORKDIR /app
 
