--- a/benchmark/computation/java/semeru-11/benchmark.yaml
+++ b/benchmark/computation/java/semeru-11/benchmark.yaml
@@ -1,10 +1,8 @@
 language: Java
-mode: Temurin
+mode: Semeru
 version:
-  - '8'
   - '11'
   - '17'
-  - '21'
 version_regex:
   Dockerfile: 'ARG JAVA_VERSION=(\d+)'
 
