--- a/benchmark/web/java/springboot-3.2-webflux-semeru-21/benchmark.yaml
+++ b/benchmark/web/java/springboot-3.2-webflux-semeru-21/benchmark.yaml
@@ -1,14 +1,13 @@
 language: Java
-mode: Temurin
+mode: Semeru
 version:
-  - '17'
   - '21'
 version_regex:
   Dockerfile: 'ARG JAVA_VERSION=(\d+)'
   pom.xml: '<java\.version>(\d+)<\/java\.version>'
 framework: Spring Boot
 framework_website: https://spring.io/projects/spring-boot
-framework_flavor: MVC
+framework_flavor: WebFlux
 framework_version:
   - '3.2'
 
@@ -17,5 +16,5 @@ extended_warmup: true
 copy:
   - 'springboot/DemoApplication.java': 'src/main/java/com/example/demo/DemoApplication.java'
   - 'springboot/application.properties': 'src/main/resources/application.properties'
-  - 'springboot-mvc/MyController-java-17.java': 'src/main/java/com/example/demo/MyController.java'
-  - 'springboot-mvc/pom-3.xml': 'pom.xml'
+  - 'springboot-webflux/MyController-java-17.java': 'src/main/java/com/example/demo/MyController.java'
+  - 'springboot-webflux/pom-3.xml': 'pom.xml'
