--- a/benchmark/web/java/springboot-3.2-webflux-temurin-17/benchmark.yaml
+++ b/benchmark/web/java/springboot-3.2-webflux-temurin-17/benchmark.yaml
@@ -4,7 +4,7 @@ version:
   - '17'
   - '21'
 version_regex:
-  Dockerfile: 'temurin[-:](\d+)'
+  Dockerfile: 'ARG JAVA_VERSION=(\d+)'
   pom.xml: '<java\.version>(\d+)<\/java\.version>'
 framework: Spring Boot
 framework_website: https://spring.io/projects/spring-boot
@@ -13,3 +13,9 @@ framework_version:
   - '3.2'
 
 extended_warmup: true
+
+copy:
+  - 'springboot/DemoApplication.java': 'src/main/java/com/example/demo/DemoApplication.java'
+  - 'springboot/application.properties': 'src/main/resources/application.properties'
+  - 'springboot-webflux/MyController-java-17.java': 'src/main/java/com/example/demo/MyController.java'
+  - 'springboot-webflux/pom-3.xml': 'pom.xml'
