--- a/benchmark/web/java/vertx-4-semeru-21/benchmark.yaml
+++ b/benchmark/web/java/vertx-4-semeru-21/benchmark.yaml
@@ -1,8 +1,6 @@
 language: Java
-mode: Temurin
+mode: Semeru
 version:
-  - '11'
-  - '17'
   - '21'
 version_regex:
   Dockerfile: 'ARG JAVA_VERSION=(\d+)'
