--- a/benchmark/web/csharp/aspdotnetcore/benchmark.yaml
+++ b/benchmark/web/csharp/aspdotnetcore/benchmark.yaml
@@ -3,11 +3,12 @@ mode: .NET
 version:
   - '6.0'
   - '8.0'
+  - '9.0'
 version_regex:
   Dockerfile: DEFAULT_DOCKER_REGEX
   web.csproj: '<TargetFramework>net(.+)<\/TargetFramework>'
 framework: ASP.NET Core
-framework_website: https://github.com/dotnet/aspnetcore
+framework_website: https://asp.net
 framework_flavor: Default
 framework_version:
   - '1'
