--- a/benchmark/computation/csharp/dotnet/benchmark.yaml
+++ b/benchmark/computation/csharp/dotnet/benchmark.yaml
@@ -3,6 +3,14 @@ mode: .NET
 version:
   - '6.0'
   - '8.0'
+  - '9.0'
 version_regex:
   Dockerfile: DEFAULT_DOCKER_REGEX
   web.csproj: '<TargetFramework>net(.+)<\/TargetFramework>'
+framework: .NET
+framework_website: https://dot.net
+framework_flavor: Default
+framework_version:
+  - '1'
+
+extended_warmup: true
