feat: use capital AS

--- a/benchmark/computation/swift/swift-5.10/Dockerfile
+++ b/benchmark/computation/swift/swift-5.10/Dockerfile
@@ -1,4 +1,4 @@
-FROM swift:5.10 as builder
+FROM swift:5.10 AS builder
 
 WORKDIR /app
 COPY Sources ./Sources
@@ -6,7 +6,7 @@ COPY Package.swift ./Package.swift
 
 RUN swift build -c release
 
-FROM swift:5.10-slim as runner
+FROM swift:5.10-slim AS runner
 
 WORKDIR /app
 COPY --from=builder /app/.build/release/benchmark ./benchmark
