--- a/benchmark/computation/rust/rust-1.40/Dockerfile
+++ b/benchmark/computation/rust/rust-1.40/Dockerfile
@@ -1,4 +1,4 @@
-FROM rust:1.40-slim as builder
+FROM rust:1.40-slim AS builder
 
 WORKDIR /app
 COPY src ./src
@@ -6,7 +6,7 @@ COPY Cargo.toml ./Cargo.toml
 
 RUN cargo build --release
 
-FROM debian:bookworm-slim as runner
+FROM debian:bookworm-slim AS runner
 
 WORKDIR /app
 COPY --from=builder /app/target/release/benchmark ./benchmark
