--- a/benchmark/web/rust/rama-0.2-rust-1.86/Cargo.toml
+++ b/benchmark/web/rust/rama-0.2-rust-1.86/Cargo.toml
@@ -6,7 +6,9 @@ publish = false
 rust-version = "1.86.0"
 
 [dependencies]
-rama = { version = "0.2.0-alpha.11", features = ["http-full", "boring"] }
+rama = { version = "0.2.0-alpha.13", features = ["http-full", "compression"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["full"] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
