--- a/benchmark/web/javascript/express-5-bun-1/benchmark.yaml
+++ b/benchmark/web/javascript/express-5-bun-1/benchmark.yaml
@@ -7,3 +7,6 @@ framework_website: https://expressjs.com
 framework_flavor: Default
 framework_version:
   - '4'
+
+copy:
+  - 'express-base/main.js': 'main.js'
