benchmark: add connection pooling to Ruby on Rails

--- a/benchmark/web/ruby/rails-8-ruby-3.2/Gemfile
+++ b/benchmark/web/ruby/rails-8-ruby-3.2/Gemfile
@@ -20,3 +20,5 @@ gem "bootsnap", require: false
 
 # Add HTTP asset caching/compression and X-Sendfile acceleration to Puma [https://github.com/basecamp/thruster/]
 gem "thruster", require: false
+
+gem "connection_pool"
