benchmark: abstract Zig version

--- a/benchmark/computation/zig/zig-0.14/Dockerfile
+++ b/benchmark/computation/zig/zig-0.14/Dockerfile
@@ -6,7 +6,7 @@ COPY build.zig ./build.zig
 
 EXPOSE 3000
 
-RUN apk add zig
+RUN apk add zig=0.14.0-r0
 RUN zig build -Doptimize=ReleaseFast
 
-CMD ["./zig-out/bin/zig_0_14"]
+CMD ["./zig-out/bin/benchmark"]
