--- a/benchmark/web/rust/rama-0.2-rust-1.86/Cargo.toml
+++ b/benchmark/web/rust/rama-0.2-rust-1.86/Cargo.toml
@@ -10,7 +10,7 @@ default = []
 tracing = ["dep:tracing", "dep:tracing-subscriber"]
 
 [dependencies]
-rama = { version = "0.2.0-alpha.13", features = ["http-full", "compression"] }
+rama = { version = "0.2.0", features = ["http-full", "compression"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["full"] }
