--- a/benchmark/web/rust/hyper-1-rust-1.86/Cargo.toml
+++ b/benchmark/web/rust/hyper-1-rust-1.86/Cargo.toml
@@ -8,7 +8,15 @@ publish = false
 http-body-util = "0.1"
 hyper = { version = "1", features = ["full"] }
 hyper-util = { version = "0.1", features = ["full"] }
-reqwest = { version = "0.12", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1", features = ["full"] }
+mimalloc = { version = "0.1", default-features = false }
+
+[profile.release]
+opt-level = 3
+codegen-units = 1
+panic = 'abort'
+lto = 'thin'
+debug = false
+overflow-checks = false
