--- a/benchmark/web/rust/hyper-1-rust-1.86/Cargo.toml
+++ b/benchmark/web/rust/hyper-1-rust-1.86/Cargo.toml
@@ -1,17 +1,19 @@
 [package]
 name = "app"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 publish = false
 
 [dependencies]
 http-body-util = "0.1"
-hyper = { version = "1", features = ["full"] }
+hyper = { version = "1", features = ["server", "client", "http1"] }
 hyper-util = { version = "0.1", features = ["full"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1", features = ["full"] }
 mimalloc = { version = "0.1", default-features = false }
+smallstr = { version = "0.3.1", features = ["serde"] }
+thiserror = "2.0.16"
 
 [profile.release]
 opt-level = 3
